# tetris-c

./: CMakeLists.txt  README.md
src/: ball.cxx  ball.hxx  board.cxx  board.hxx  controller.cxx  controller.hxx  game_config.cxx  game_config.hxx  main.cxx  model.cxx  model.hxx  player.cxx  player.hxx  position_set.cxx  position_set.hxx  view.cxx  view.hxx
test/: model_test.cxx
